# timol

./: .gitignore  README.md  pyproject.toml
paper/: paper.md
src/timol/: R_hemo.xyz  __init__.py  main.py  viewer.py
src/timol/cli/: main.py
