[project]
name = "timol"
version = "0.1.0"
description = "3D Molecular viewer in the terminal"
readme = "README.md"
authors = [
    { name = "GregoryFonseca", email = "gregorycordeirofonseca@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ase>=3.24.0",
    "importlib-resources>=6.5.2",
    "numpy>=2.2.3",
    "textual>=2.1.2",
]

[project.scripts]
timol = "timol:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
